fix(VField): don't hide overflow

--- a/packages/vuetify/src/components/VField/VField.sass
+++ b/packages/vuetify/src/components/VField/VField.sass
@@ -18,7 +18,6 @@
   flex: 1 0
   grid-area: control
   position: relative
-  overflow: hidden
 
   &--disabled
     opacity: var(--v-disabled-opacity)
